--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.6",
-        "whitemerry/phpkin": "dev-master"
+        "php": ">=5.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7"
