--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 language: php
 php:
   - '5.6'
-  - '7.0'
+  - '7.0.22'
   - '7.1'
 install:
-  - composer install --no-dev
+  - composer install
 script:
   - ./test.sh
+dist: 'trusty'
