修改EasyKin的命名空间

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
     "autoload-dev": {
         "psr-4": {
             "easyops\\easykin\\tests\\": "tests/"
-        }
+        },
+        "files": ["src/EasyKin.php"]
     }
 }
