--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,13 @@
         "psr-4": {
             "easyops\\easykin\\": "src/"
         },
-        "files": ["src/EasyKin.php"]
+        "files": [
+            "src/EasyKin.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
             "easyops\\easykin\\tests\\": "tests/"
-        },
-        "files": ["src/EasyKin.php"]
+        }
     }
 }
