--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.0"
+        "php": ">=7.0",
+        "symfony/polyfill-php80": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "7.5.1"
